<resources>
    <string name="app_name">小书生</string>
    <string name="scan">扫一扫</string>
    <string name="search">搜索</string>
    <string name="message">消息</string>
    <string name="borrow_book_tips">暂无待借图书,点击添加</string>
    <string name="to_borrow_book_list">待借书单</string>
    <string name="app_slogan">后青春时期的读书笔记</string>
    <string name="btu_login_tips">图书馆登录</string>
    <string name="edit_hit_lib_account">你的图书馆账号</string>
    <string name="login">登录</string>
    <string name="edit_tip_password">你的密码</string>
    <string name="edit_tip_name">你的姓名</string>
    <string name="search_hint">搜索图书馆</string>
    <string name="no_search_result">未找到相关结果</string>
    <string name="edit_tips">编辑头像和昵称</string>
    <string name="about_us">关于我们</string>
    <string name="settings">设置</string>
    <string name="borrow_tips">借阅规则</string>
    <string name="edit_change_nickname_tips">给自己起个好听的笔名吧</string>
    <string name="messages_tips">消息提醒</string>
    <string name="clean_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="clear">清空</string>
    <string name="add_continue">继续添加</string>
    <string name="i_have_under_line">我也是有底线的</string>
    <string name="index_book_num">索书号</string>
    <string name="book_location">位置</string>
    <string name="book_status">书刊状态</string>
    <string name="nickname">昵称</string>
    <string name="save">保存</string>
    <string name="string_shujia">书架</string>
    <string name="brrowstate">还可以看%1$s天</string>
</resources>
