<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_mine_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />


    <RelativeLayout
        android:id="@+id/relative_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_change_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:id="@+id/relative_change_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.bitworkshop.litebookscholar.ui.view.CircleImageView
                    android:id="@+id/image_user_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:src="@color/colorAccent"
                    app:civ_border_color="@android:color/transparent"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/tv_user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/image_user_icon"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/image_user_icon"
                    android:text="橡皮"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_edit_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_user_nickname"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/image_user_icon"
                    android:text="@string/edit_tips" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_borrow_rule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_change_user_info"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:id="@+id/relative_borrow_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_borrow_rule_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_rules"
                    android:gravity="center"
                    android:text="@string/borrow_tips"
                    android:textColor="@android:color/black" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_borrow_rule"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <RelativeLayout
                android:id="@+id/relative_setting_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_setting_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_settings"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@android:color/black" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_setting"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">


            <RelativeLayout
                android:id="@+id/relative_about_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_about_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_group_white_24dp"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>